--- a/DesignMode/1-结构型模式.md
+++ b/DesignMode/1-结构型模式.md
@@ -1,6 +1,18 @@
 - # 适配器模式（Adapter Pattern）
 
+  https://www.runoob.com/design-pattern/adapter-pattern.html
+
+  **何时使用：** 1、系统需要使用现有的类，而此类的接口不符合系统的需要。 2、想要建立一个可以重复使用的类，用于与一些彼此之间没有太大关联的一些类，包括一些可能在将来引进的类一起工作，这些源类不一定有一致的接口。 3、通过接口转换，将一个类插入另一个类系中。（比如老虎和飞禽，现在多了一个飞虎，在不增加实体的需求下，增加一个适配器，在里面包容一个虎对象，实现飞的接口。）
+
+  **关键代码：**适配器继承或依赖已有的对象，实现想要的目标接口。
+
+  **应用实例：** 1、美国电器 110V，中国 220V，就要有一个适配器将 110V 转化为 220V。 2、JAVA JDK 1.1 提供了 Enumeration 接口，而在 1.2 中提供了 Iterator 接口，想要使用 1.2 的 JDK，则要将以前系统的 Enumeration 接口转化为 Iterator 接口，这时就需要适配器模式。 3、在 LINUX 上运行 WINDOWS 程序。 4、JAVA 中的 jdbc。	
+
+  
+
 - # 桥接模式（Bridge Pattern）
+
+  
 
 - # 过滤器模式（Filter、Criteria Pattern）
 
